# CacheBolt

./: .gitignore  CNAME  COMMENT.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  combinado.txt  config.yaml  index.html
.cargo/: config.toml
.github/workflows/: release.yml
examples/aws/: s3-policy.json
src/: config.rs  eviction.rs  lib.rs  main.rs  proxy.rs
src/admin/: clean.rs  mod.rs  status_memory.rs  ui.rs
src/memory/: memory.rs  mod.rs
src/rules/: bypass.rs  latency.rs  mod.rs  refresh.rs
src/storage/: azure.rs  gcs.rs  local.rs  mod.rs  s3.rs
tests/: test_config.rs  test_eviction.rs  test_main.rs  test_memory.rs  test_proxy.rs  test_rules.rs  test_storage.rs
ui/: package-lock.json  package.json
ui/src/layouts/: Layout.astro
ui/src/pages/admin/: cache.astro  index.astro  settings.astro
ui/src/pages/cb-admin/: cache.astro  index.astro  settings.astro
